# Turtlebot_Semantic_Mapping_Navigation

./: .gitignore  README.md
main_ws/config/: oakd_pro.yaml
main_ws/notes/: binaries.txt  occupancy_grid_interface.txt
main_ws/src/custom_navigator/: package.xml  pytest.ini  setup.cfg  setup.py
main_ws/src/custom_navigator_interfaces/: CMakeLists.txt  package.xml
main_ws/src/mission_control/: package.xml  setup.py
main_ws/src/mission_control/mission_control/: __init__.py  state_machine.py
main_ws/src/mission_control/web/: dashboard.html
main_ws/src/object_location/: package.xml  setup.cfg  setup.py
main_ws/src/object_location_interfaces/: CMakeLists.txt  package.xml
main_ws/src/robot_common/: package.xml  (+1 more)
sandbox_ws/: mapdata.txt  read_this.txt  requirements.txt
sandbox_ws/configs/: oakd_pro.yaml
scripts/: install_binaries.sh  run_live_demo.sh  run_simulated_demo.sh  setup_env.sh
scripts/front_end/: launch_dashboard.sh  launch_frontend.sh  launch_rosbridge.sh  launch_state_machine.sh
scripts/object_detection/: demo_approach.sh  demo_object_location.sh  demo_simulated_approach.sh  demo_simulated_object_location.sh  demo_simulation_object_location.sh  launch_approach_controller.sh  launch_detection_node.sh  launch_distance_node.sh  launch_executor_node.sh  launch_location_node.sh  launch_map_node.sh  launch_map_viewer.sh  launch_nav2.sh  launch_nav2_slam_toolbox.sh  launch_navigation_server.sh  launch_robo_keyboard.sh  launch_robosync_node.sh  launch_rviz.sh  launch_temp_viewer.sh  launch_turtlebot_simulation.sh  test_simulate_custom_navigator.sh
(+70 files in other folders)
